tests/TemplateChecker/error_result.txt
--------------------------------------
example.cpp:16:6: error: Find Null Pointer Dereference Fault
  *a = 5;
     ^
example.cpp:14:5: note: Set Null or Delete here
  a = NULL;
    ^
--------------------------------------
example.cpp:33:3: error: Miss memory realese
  p=new int;
  ^
example.cpp:33:5: note: Miss memory realese
  p=new int;
    ^
--------------------------------------
example.cpp:44:3: error: Miss memory realese
  new int;
  ^
--------------------------------------
example.cpp:45:3: error: Miss memory realese
  int*m=new int[n];
  ^
example.cpp:45:9: note: Miss memory realese
  int*m=new int[n];
        ^
--------------------------------------
example.cpp:46:3: error: Realese doesn't match allocation
  delete m;
  ^
example.cpp:45:9: note: Miss memory realese
  int*m=new int[n];
        ^
--------------------------------------
example.cpp:56:9: error: Unintialized Varirbale 'nameis declared here
  char *name;
        ^
example.cpp:59:21: note: Used here
  printf("%s %d\n", name, age);
                    ^
